--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -121,7 +121,7 @@
                         <% posts.forEach(post => { %>
                             <div class="col-md-4 mb-3">
                                 <div class="card">
-                                    <img class="card-img-top" src="<%= post.photeUrl %>" alt="Post image">
+                                    <img class="card-img-top" src="<%= post.photoUrl %>" alt="Post image">
                                     <div class="card-body">
                                         <h5 class="card-title"><%= post.title %></h5>
                                         <p class="card-text"><%= post.text %></p>
